--- a/.github/workflows/yangxiangchangfang.yml
+++ b/.github/workflows/yangxiangchangfang.yml
@@ -3,7 +3,7 @@ on:
   workflow_dispatch:
   schedule:
     - cron: '17 0/6 * * *'
-jobs:
+jobs:  # 22768
   build:
     runs-on: ubuntu-latest
     steps:
